<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_hub</name>
  <version>1.0.0</version>
  <description>demo for shared mem block</description>
  <maintainer email="dingbobby@hotmail.com">feng.ding</maintainer>
  <license> License</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msg</depend>
  <depend>beatles</depend>
  <depend>rclcpp</depend>
  <depend>af_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
