project(tools)

if(WITH_IPC)
    add_subdirectory(databag_message_data_extractor)
    add_subdirectory(databag_message_type_convertor)
    add_subdirectory(bag_to_image_to_video)
    add_subdirectory(fs_combiner)
    if(CALIBRATE)
    add_subdirectory(lidars_calibrate)
    endif()
    if (NOT WITH_ROS2)
        add_subdirectory(transform_apollo_crdc)
    endif()
else()
    add_subdirectory(lidars_calibrate)
    add_subdirectory(afred_data_collect)
endif()

if(WITH_ROS2)
    add_subdirectory(lidar_dynamic_calibrate)
    add_subdirectory(service_server)
    if(WITH_TDA4)
       add_subdirectory(AF_server)
    endif()
endif()